--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 .cardbox .card {
-  width: clamp(200px, 25vw, 400px);
+  width: min(96%, 400px);
   aspect-ratio: 4/5;
   height: auto;
   padding: 24px 28px;
@@ -118,11 +118,35 @@ body {
   background-repeat: repeat;
   background-size: 4px 4px;
   box-shadow: 0 0 9px rgba(0, 0, 0, 0.1);
+  backface-visibility: visible;
+  perspective: 550px;
+    perspective-origin: 100% 150%;
+    transform-style: preserve-3d;
+}
+
+.cardbox .card-inner {
+  backface-visibility: hidden;
 }
 
 .cardbox--reveal {
   opacity: 1;
   visibility: visible;
+}
+
+.cardbox--flip .card {
+  animation: card-flip 600ms;
+}
+
+@keyframes card-flip {
+  0% {
+    transform: scale(1) rotateX(0) rotateY(0deg);
+  }
+  50% {
+    transform: scale(1.04) rotateX(5deg) rotateY(180deg);
+  }
+  100% {
+    transform: scale(1) rotateX(0) rotateY(360deg);
+  }
 }
 
 .cardbox-buttons {
