--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,10 @@ body {
   font-family: "Alegreya Sans", sans-serif;
   font-weight: 300;
   position: relative;
+  background-color: #f3f0ec;
+    background-image: radial-gradient(#70a7e93e 2px, transparent 2px), radial-gradient(#70a7e93f 2px, #f3f0ec 2px);
+    background-size: 80px 80px;
+    background-position: 0 0, 40px 40px;
 }
 
 /* Card Stuff */
@@ -112,19 +116,49 @@ body {
   padding: 24px 28px;
   border-radius: 8px;
   background-color: #fff;
-  background-image: radial-gradient(
-    circle at 50% 50%,
-    rgba(219, 210, 144, 0.2) 0%,
-    rgba(255, 255, 255, 0.04) 55%
-  );
-  background-repeat: repeat;
-  background-size: 4px 4px;
   box-shadow: 0 0 9px rgba(0, 0, 0, 0.1);
   backface-visibility: visible;
   transform-style: preserve-3d;
   perspective-origin: bottom;
   transform: translate3d(0, -10px, 10px) rotateX(4deg);
   transition: 400ms;
+}
+
+.cardbox .card:after {
+  border-radius: 8px;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+  background-color: #fff;
+    background-image: radial-gradient(circle at 50% 50%,
+        rgba(219, 210, 144, 0.2) 0%,
+        rgba(255, 255, 255, 0.04) 55%);
+    background-repeat: repeat;
+    background-size: 4px 4px;
+    box-shadow: 0 0 9px rgba(0, 0, 0, 0.1);
+  backface-visibility: hidden;
+  overflow: hidden;
+}
+
+.cardbox .card:before {
+  border-radius: 8px;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+  background-color: #516fb4;
+    opacity: 0.7;
+    background: linear-gradient(135deg, #d0d0d055 25%, transparent 25%) -40px 0/ 80px 80px, linear-gradient(225deg, #d0d0d0 25%, transparent 25%) -40px 0/ 80px 80px, linear-gradient(315deg, #d0d0d055 25%, transparent 25%) 0px 0/ 80px 80px, linear-gradient(45deg, #d0d0d0 25%, #516fb4 25%) 0px 0/ 80px 80px;
+  backface-visibility: visible;
 }
 
 .cardbox .card-inner {
