--- a/src/style.css
+++ b/src/style.css
@@ -251,16 +251,9 @@ button.skip {
 /* Timer and reveals */
 
 .team-timer-wrap {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  justify-content: center;
   margin-left: auto;
   margin-right: auto;
   width: min(96%, 600px);
-}
-
-.team-timer-wrap section {
   margin-bottom: 24px;
   margin-top: 24px;
   width: min(96%, 600px);
@@ -270,6 +263,60 @@ button.skip {
   text-align: center;
   font-size: 1.2rem;
   flex: 1 1;
+}
+
+.team-select {
+  border-bottom: 2px dotted #ccc;
+  padding-bottom: 24px;
+}
+
+.team-select fieldset {
+  width: 100%;
+  max-width: 100%;
+  min-width: unset;
+  border: unset;
+  margin: unset;
+  padding: unset;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.team-select legend {
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin-bottom: 4px;
+  width: 100%;
+}
+
+.team-box {
+  padding: 12px;
+  position: relative;
+  border-radius: 6px;
+  background-color: #70a7e93f;
+  min-width: 12ch;
+}
+
+.team-box input {
+  appearance: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.team-box input:checked {
+  border: 2px solid blue;
+}
+
+.team-box input:checked + label {
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 
 .time-display {
@@ -290,6 +337,7 @@ button.skip {
   visibility: hidden;
   text-align: center;
   margin-bottom: 24px;
+  font-weight: 400;
 }
 
 .time-over-message--reveal {
